--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ aioitertools==0.12.0
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+asttokens==3.0.0
 attrs==25.3.0
 beautifulsoup4==4.13.4
 boto3==1.37.3
@@ -17,9 +18,11 @@ charset-normalizer==3.4.2
 click==8.2.1
 cssselect==1.3.0
 dataclasses-json==0.5.14
+decorator==5.2.1
 deeplake==3.9.46
 dill==0.4.0
 distro==1.9.0
+executing==2.2.0
 feedfinder2==0.0.4
 feedparser==6.0.11
 filelock==3.18.0
@@ -46,12 +49,16 @@ httpx-sse==0.4.0
 huggingface-hub==0.33.0
 humbug==0.3.2
 idna==3.10
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 jieba3k==0.35.1
 Jinja2==3.1.6
 jiter==0.10.0
 jmespath==1.0.1
 joblib==1.5.1
 jsonpatch==1.33
+jsonpickle==4.1.1
 jsonpointer==3.0.0
 langchain==0.3.25
 langchain-community==0.3.24
@@ -69,6 +76,7 @@ lxml_html_clean==0.4.2
 lz4==4.4.4
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib-inline==0.1.7
 mpmath==1.3.0
 multidict==6.4.4
 multiprocess==0.70.18
@@ -85,24 +93,31 @@ openapi-schema-pydantic==1.2.4
 orjson==3.10.18
 outcome==1.3.0.post0
 packaging==24.2
+parso==0.8.4
 pathos==0.3.4
+pexpect==4.9.0
 pillow==10.4.0
 pox==0.3.6
 ppft==1.7.7
+prompt_toolkit==3.0.51
 propcache==0.3.1
 proto-plus==1.26.1
 protobuf==6.31.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.10.1
 pyparsing==3.2.3
 pypdf==5.7.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+pyvis==0.3.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
@@ -118,6 +133,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
 SQLAlchemy==2.0.41
+stack-data==0.6.3
 sympy==1.14.0
 tenacity==8.5.0
 tiktoken==0.9.0
@@ -126,6 +142,7 @@ tldextract==5.3.0
 tokenizers==0.21.1
 torch==2.7.1
 tqdm==4.66.6
+traitlets==5.14.3
 transformers==4.52.4
 trio==0.30.0
 trio-websocket==0.12.2
@@ -134,6 +151,7 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 uritemplate==4.2.0
 urllib3==2.4.0
+wcwidth==0.2.13
 wrapt==1.17.2
 wsproto==1.2.0
 yarl==1.20.0
