--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ __pycache__/
 deeplake/
 lib/
 Module-3: Learning How to Prompt/9-Project: Improved News Article Summarizer/
+Module-2: Large Language Models and LangChain/tempCodeRunnerFile.py
