added credentials.json to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ deeplake/
 lib/
 Module-3: Learning How to Prompt/9-Project: Improved News Article Summarizer/
 Module-2: Large Language Models and LangChain/tempCodeRunnerFile.py
+credentials.json
