--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ deeplake/
 lib/
 Module-3: Learning How to Prompt/9-Project: Improved News Article Summarizer/
 Module-2: Large Language Models and LangChain/tempCodeRunnerFile.py
-credentials.json
+Module-4: Keeping Knowledge Organized with indexes/credentials.json
