Finished the last Module (some mini-projects are left)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ lib/
 Module-3: Learning How to Prompt/9-Project: Improved News Article Summarizer/
 Module-2: Large Language Models and LangChain/tempCodeRunnerFile.py
 Module-4: Keeping Knowledge Organized with indexes/credentials.json
+Databases/
